fix(tasks): task title edit being under collapse sub tasks btn

--- a/src/app/features/tasks/task/task.component.scss
+++ b/src/app/features/tasks/task/task.component.scss
@@ -18,10 +18,10 @@ $z-btn: 4;
 $z-btn-hover: 5;
 $z-check-done: 11;
 $z-first-line-controls-hover: 12;
-$z-task-title-focus: 12;
 $z-swipe-block: 13;
 $z-toggle-sub-task-btn: 14;
-$z-drag-over-msg: 15;
+$z-task-title-focus: 15;
+$z-drag-over-msg: 16;
 $z-time-btn-svg-wrapper: 5555;
 
 
